--- a/locales/zh_CN/LC_MESSAGES/community/topics/page-metadata.po
+++ b/locales/zh_CN/LC_MESSAGES/community/topics/page-metadata.po
@@ -22,7 +22,7 @@ msgstr ""
 
 #: ../../community/topics/page-metadata.md:1
 msgid "Page-level configuration"
-msgstr ""
+msgstr "页面级配置"
 
 #: ../../community/topics/page-metadata.md:3
 msgid ""
@@ -33,12 +33,15 @@ msgid ""
 "sections with periods (`.`). This is [similar to how the TOML language "
 "defines nested configuration](https://toml.io/en/v1.0.0#keys)."
 msgstr ""
+"在某些区域，支持页面级配置以控制每个页面的行为。尽量使此配置遵循我们配置的 `html_theme_options` 结构。"
+"以 `html_theme` 开头，并用句点 (`.`) 分隔“嵌套”配置部分。这类似于 [TOML 语言定义嵌套配置的方式](https://toml.io/en/v1.0.0#keys)。"
 
 #: ../../community/topics/page-metadata.md:8
 msgid ""
 "For example, to remove the secondary sidebar, we use a page metadata key "
 "like this:"
 msgstr ""
+"例如，要移除辅助侧边栏，使用如下页面元数据键："
 
 #: ../../community/topics/page-metadata.md
 msgid "rST"
@@ -54,4 +57,4 @@ msgid ""
 "similar to what we'd expect if we put this in a Python dictionary in "
 "`conf.py`:"
 msgstr ""
-
+"请注意句点如何自然地分隔嵌套部分，并且看起来非常类似于如果我们将此放入 `conf.py` 中的 Python 字典时的样子："
